include/pico/json.h

// Defines

// Structure definitions

/**
 * @brief Enumerates the allowed data-types for JSON data
 *
 * JSON structures can store string, decimal, sub-structure and array types.
 * The JSON interface supports the retrieval of key-value pairs, so it's
 * often necessary to be able to query or set the type of data to be used.
 * This enum defines the enumerated values to use for these queries.
 *
 * Note that at present array types are not supported (and so don't appear in
 * the enumerate).
 */
typedef enum _JSONTYPE {
	JSONTYPE_INVALID = -1,

	JSONTYPE_STRING,
	JSONTYPE_SUBLIST,
	JSONTYPE_DECIMAL,
	JSONTYPE_INTEGER,

	JSONTYPE_NUM
} JSONTYPE;
/**
 * The internal structure can be found in json.c
 */
typedef struct _Json Json;
// Function prototypes

DLL_PUBLIC Json * json_new();
DLL_PUBLIC void json_delete(Json * json);
DLL_PUBLIC void json_add_string(Json * json, char const * key, char const * value);
DLL_PUBLIC void json_add_buffer(Json * json, char const * key, Buffer const * value);
DLL_PUBLIC void json_add_decimal(Json * json, char const * key, double value);
DLL_PUBLIC void json_add_sublist(Json * json, char const * key, Json * sublist);
DLL_PUBLIC size_t json_serialize_size(Json * json);
DLL_PUBLIC size_t json_serialize(Json * json, char * buffer, size_t size);
DLL_PUBLIC size_t json_serialize_buffer(Json * json, Buffer * buffer);
DLL_PUBLIC bool json_deserialize_string(Json * json, char const * json_string, size_t length);
DLL_PUBLIC bool json_deserialize_buffer(Json * json, Buffer const * buffer);
DLL_PUBLIC void json_print(Json * json);
DLL_PUBLIC void json_log(Json * json);
DLL_PUBLIC JSONTYPE json_get_type(Json * json, char const * key);
DLL_PUBLIC char const * json_get_string(Json * json, char const * key);
DLL_PUBLIC double json_get_decimal(Json * json, char const * key);