include/pico/cryptosupport.h

// Structure definitions

// Function prototypes

// Function definitions

DLL_PUBLIC bool cryptosupport_getpublicpem(EC_KEY * eckey, Buffer * buffer);
DLL_PUBLIC bool cryptosupport_getpublicder(EC_KEY * eckey, Buffer * buffer);
DLL_PUBLIC bool cryptosupport_generate_mac(Buffer * macKey, Buffer * data, Buffer * bufferout);
DLL_PUBLIC bool cryptosupport_verify_signature(EC_KEY const * publickey, Buffer const * bufferin, Buffer * sigin);
DLL_PUBLIC bool cryptosupport_encrypt(Buffer const * key, Buffer const * iv, Buffer const * bufferin, Buffer * encryptedout);
DLL_PUBLIC bool cryptosupport_decrypt(Buffer const * key, Buffer const * iv, Buffer const * bufferin, Buffer * cleartextout);
DLL_PUBLIC bool cryptosupport_encrypt_iv_base64(Buffer const * key, Buffer const * bufferin, Buffer * encryptedout);
DLL_PUBLIC bool cryptosupport_decrypt_iv_base64(Buffer const * key, Buffer const * bufferin, Buffer * cleartextout);
DLL_PUBLIC bool cryptosupport_generate_symmetric_key(Buffer * key, unsigned int size);
DLL_PUBLIC void cryptosupport_generate_iv(Buffer * iv);
DLL_PUBLIC bool cryptosupport_generate_sha256(Buffer * bufferin, Buffer * bufferout);
DLL_PUBLIC bool cryptosupport_generate_commitment(EC_KEY * publickey, Buffer * commitment);
DLL_PUBLIC bool cryptosupport_generate_commitment_base64(EC_KEY * publickey, Buffer * commitment);
DLL_PUBLIC EC_KEY * cryptosupport_read_base64_buffer_public_key(Buffer * keybuffer);
DLL_PUBLIC EC_KEY * cryptosupport_read_base64_string_public_key(char const * keystring);
DLL_PUBLIC EC_KEY * cryptosupport_read_buffer_public_key(Buffer * keybuffer);