LibPicoCSharp/LibPico/LibPico.cs


        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr buffer_new(int block_size);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void buffer_delete(IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern int buffer_append(IntPtr buffer, byte[] toAppend, int size);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern int buffer_append(IntPtr buffer, IntPtr toAppend, int size);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern int buffer_append_string(IntPtr buffer, string data);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern int buffer_append_buffer(IntPtr buffer, IntPtr appendFrom);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern int buffer_append_buffer_lengthprepend(IntPtr buffer, IntPtr appendFrom);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern int buffer_copy_lengthprepend(IntPtr bufferin, int start, IntPtr bufferout);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void buffer_truncate(IntPtr buffer, int reduce_by);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void buffer_print(IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void buffer_print_base64(IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void buffer_log(IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void buffer_log_base64(IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void buffer_clear(IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern int buffer_copy_to_string(IntPtr buffer, byte[] str, int max_length);
        [DllImport(dllLocation, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr buffer_copy_to_new_string(IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern int buffer_get_pos(IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr buffer_get_buffer(IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void buffer_set_min_size(IntPtr buffer, int size);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern int buffer_get_size(IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void buffer_set_pos(IntPtr buffer, int pos);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool buffer_equals(IntPtr buffer, IntPtr compare);

        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr channel_connect(string name);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr channel_new();
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void channel_delete(IntPtr channel);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool channel_read(IntPtr channel, IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool channel_write(IntPtr channel, byte[] data, int length);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool channel_write_buffer(IntPtr channel, IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr channel_get_name(IntPtr channel);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void channel_get_url(IntPtr channel, IntPtr buffer);

        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr sigmakeyderiv_new();
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void sigmakeyderiv_delete(IntPtr sigmakeyderiv);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void sigmakeyderiv_set(IntPtr sigmakeyderiv, IntPtr sharedSecret, IntPtr picoNonce, IntPtr serviceNonce);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void sigmakeyderiv_get_next_key(IntPtr sigmakeyderiv, IntPtr keyBytes, int length);

        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void base64_encode_buffer(IntPtr bufferin, IntPtr bufferout);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  void base64_encode_string(string stringin, IntPtr bufferout);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  void base64_encode_mem(IntPtr memin, int length, IntPtr bufferout);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  int base64_encode_size_max(int input);

        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  void base64_decode_buffer(IntPtr bufferin, IntPtr bufferout);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  void base64_decode_string(string stringin, IntPtr bufferout);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  int base64_decode_size_max(int input);

        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  IntPtr json_new();
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  void json_delete(IntPtr json);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)] 
        public static extern void json_add_string(IntPtr json, string key, string value);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)] 
        public static extern void json_add_buffer(IntPtr json, string key, IntPtr value);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  void json_add_decimal(IntPtr json, string key, double value);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  void json_add_sublist(IntPtr json, string key, IntPtr sublist);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  int json_serialize_size(IntPtr json);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern int json_serialize(IntPtr json, byte[] buffer, int size);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  int json_serialize_buffer(IntPtr json, IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool json_deserialize_string(IntPtr json, string json_string, int length);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  bool json_deserialize_buffer(IntPtr json, IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  void json_print(IntPtr json);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  void json_log(IntPtr json);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  int json_get_type(IntPtr json, string key);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  IntPtr json_get_string(IntPtr json, string key);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  double json_get_decimal(IntPtr json, string key);

        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern void cryptosupport_getpublicpem(IntPtr eckey, IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  void cryptosupport_getpublicder(IntPtr eckey, IntPtr buffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  bool cryptosupport_generate_mac(IntPtr macKey, IntPtr data, IntPtr bufferout);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  bool cryptosupport_verify_signature(IntPtr publickey, IntPtr bufferin, IntPtr sigin);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  bool cryptosupport_encrypt(IntPtr key, IntPtr iv, IntPtr bufferin, IntPtr encryptedout);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  bool cryptosupport_decrypt(IntPtr key, IntPtr iv, IntPtr bufferin, IntPtr cleartextout);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  void cryptosupport_generate_iv(IntPtr iv);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  bool cryptosupport_generate_sha256(IntPtr bufferin, IntPtr bufferout);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  bool cryptosupport_generate_commitment(IntPtr publickey, IntPtr commitment);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  bool cryptosupport_generate_commitment_base64(IntPtr publickey, IntPtr commitment);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  IntPtr cryptosupport_read_base64_buffer_public_key(IntPtr keybuffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  IntPtr cryptosupport_read_base64_string_public_key(string keystring);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern  IntPtr cryptosupport_read_buffer_public_key(IntPtr keybuffer);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool cryptosupport_encrypt_iv_base64(IntPtr key, IntPtr bufferin, IntPtr encryptedout);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool cryptosupport_decrypt_iv_base64(IntPtr key, IntPtr bufferin, IntPtr cleartextout);
        [DllImport(dllLocation, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool cryptosupport_generate_symmetric_key(IntPtr key, int size);
